<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".WeatherActivity" >

    <RelativeLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" >

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:layout_alignParentRight="true"
            android:layout_margin="15dip" />

        <RelativeLayout
            android:id="@+id/weather_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weather_icon"
            android:layout_margin="10dip"
            android:padding="5dip" >

            <TextView
                android:id="@+id/main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="5dip"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/weather_main"
                android:textColor="#FFFF33"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/main_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="5dip"
                android:layout_toRightOf="@+id/main"
                android:gravity="right"
                android:textColor="#FFFF33"
                android:textSize="25sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weather_name_layout"
            android:padding="5dip" >

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="5dip"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/weather_desc"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/desc_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="5dip"
                android:layout_toRightOf="@+id/desc"
                android:gravity="right"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/c_temp_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description_layout"
            android:padding="5dip" >

            <TextView
                android:id="@+id/c_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="5dip"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/temperature"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/c_temp_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="5dip"
                android:layout_toRightOf="@+id/c_temp"
                android:gravity="right"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/min_temp_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/c_temp_layout"
            android:padding="5dip" >

            <TextView
                android:id="@+id/min_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="5dip"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/min_tem"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/min_temp_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="5dip"
                android:layout_toRightOf="@+id/min_temp"
                android:gravity="right"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/max_temp_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/min_temp_layout"
            android:padding="5dip" >

            <TextView
                android:id="@+id/max_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="5dip"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/max_tem"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/max_temp_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="5dip"
                android:layout_toRightOf="@+id/max_temp"
                android:gravity="right"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/humidity_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/max_temp_layout"
            android:padding="5dip" >

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="5dip"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/humidity"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/humidity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="5dip"
                android:layout_toRightOf="@+id/humidity"
                android:gravity="right"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>